data/cot_data_generation/slurm/42922192_overthinking.err

EnvironmentNameNotFound: Could not find conda environment: overthinking
You can list all discoverable environments with `conda info --envs`.


  File "main.py", line 14
    def get_results_fn(args: argparse.Namespace) -> str:
                           ^
SyntaxError: invalid syntax
  File "main.py", line 14
    def get_results_fn(args: argparse.Namespace) -> str:
                           ^
SyntaxError: invalid syntax
